# fqme

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test.yml  publish.yml
scripts/: pre-commit
src/: main.rs
src/lib/: mod.rs  utils.rs
src/lib/tools/: bgzf_index.rs  extract.rs  fastq_index.rs  index.rs
