[package]
name = "fqme"
version = "0.0.1-rc.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = 2

[lib]
name = "fqme_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "fqme"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
byteorder = "1.4.3"
bytes = "1.0.1"
clap = { version = "3.2.5", features = ["derive"] }
env_logger = "0.9.0"
fgoxide = "0.1.3"
gzp = "0.10.1"
lazy_static = "1.4.0"
libdeflater = "0.7.3"
log = "0.4.17"
seq_io = { git = "https://github.com/fulcrumgenomics/seq_io.git", rev = "3d461a3" }

[build-dependencies]
built = { version = "0.5.1", features = ["git2"] }

[dev-dependencies]
matches = "0.1.9"
rstest = "0.12.0"
tempfile = "3.2.0"
